# ByteAsk-Embedded-MCP

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  server.json
assets/: make_demo_gif.py
src/byteask_embedded_mcp/: __init__.py  __main__.py  config.py  http_auth.py  obs.py  render.py  schemas.py  server.py
tests/: test_backend.py  test_render.py  test_server.py
